--- a/package.json
+++ b/package.json
@@ -11,8 +11,16 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.18.1",
+    "gsap": "^3.13.0",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "lottie-react": "^2.4.1",
+    "ogl": "^1.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.3",
     "react-router-dom": "^7.6.2",
     "tailwindcss": "^4.1.10"
   },
