--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.10",
     "clsx": "^2.1.1",
     "framer-motion": "^12.18.1",
     "gsap": "^3.13.0",
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.522.0",
     "ogl": "^1.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.5.3",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^7.6.2",
     "tailwindcss": "^4.1.10"
   },
